<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="a_label">A</string>
    <string name="b_label">B</string>
    <string name="c_label">C</string>
    <string name="d_label">D</string>
    <string name="abscissa">Abscissa</string>
    <string name="abscissa_label">Abscissa [m]</string>
    <string name="abscissa_3dots">Abscissa&#8230;</string>
    <string name="about_title">About <xliff:g id="app_name">%s</xliff:g></string>
    <string name="about_toposuite">About TopoSuite</string>
    <string name="action_settings">Settings</string>
    <string name="actual_label">Actual</string>
    <string name="add">Add</string>
    <string name="add_3dots">Add&#8230;</string>
    <string name="altitude">Altitude</string>
    <string name="altitude_3dots">Altitude&#8230;</string>
    <string name="altitude_label">Altitude [m]</string>
    <string name="altitude_difference_label">Altitude difference [m]</string>
    <string name="angles_label">Angles</string>
    <string name="app_copyright">Copyright<xliff:g> &#169; 2014-%s</xliff:g> - <xliff:g id="crag">%s</xliff:g></string>
    <string name="app_developer">HGdev</string>
    <string name="app_developer_full_info"><xliff:g id="app_developer">%s</xliff:g> - <xliff:g id="app_developer_webpage_url">%s</xliff:g></string>
    <string name="app_developer_webpage_url">https://hgdev.ch/</string>
    <string name="app_developer_webpage_url_short">hgdev.ch</string>
    <string name="app_name">TopoSuite</string>
    <string name="app_version">Version: <xliff:g id="version">%s</xliff:g></string>
    <string name="app_website">Official website: </string>
    <string name="application_settings">Application settings</string>
    <string name="arc_label">Arc [m]</string>
    <string name="arc_length_label">Arc length</string>
    <string name="arrow_label">Arrow [m]</string>
    <string name="axis_implantation_label">Axis implantation</string>
    <string name="base_label">Orthogonal survey from the base</string>
    <string name="bisector_label">Bisector [m]</string>
    <string name="by_point_label">By point</string>
    <string name="calculate_3dots">Calculate&#8230;</string>
    <string name="calculated_distance_label">Calc. dist. [m]</string>
    <string name="cancel">Cancel</string>
    <string name="center_label">Centre</string>
    <string name="central_angle_label">Central angle [g]</string>
    <string name="cepm">Centre d\'Enseignement Professionnel de Morges (CEPM)</string>
    <string name="cepm_webpage_url">http://www.cepm.ch/</string>
    <string name="cepm_webpage_url_short">www.cepm.ch</string>
    <string name="cfgeo">Centre de Formation Géomatique Suisse (CF-geo)</string>
    <string name="cfgeo_webpage_url">http://www.cf-geo.ch/</string>
    <string name="cfgeo_webpage_url_short">www.cf-geo.ch</string>
    <string name="chemin_ortho_base_label">Cheminement orthogonal from the base</string>
    <string name="choose_value">Choose a value</string>
    <string name="chord_of_label">Chord (OF) [m]</string>
    <string name="chord_om_label">Chord (OM) [m]</string>
    <string name="circle_label">Circle</string>
    <string name="circle_one_label">Circle A</string>
    <string name="circle_two_label">Circle B</string>
    <string name="circle_point_center">Circle center</string>
    <string name="circle_point_start">Starting point on the edge</string>
    <string name="circle_point_end">End point on the edge</string>
    <string name="circle_result_center_label">Center of the circle</string>
    <string name="circle_result_radius_label">Radius of the circle</string>
    <string name="circle_surface_label">Circle surface [m&#178;]</string>
    <string name="circumference_label">Circle Circumference [m]</string>
    <string name="clear_3dots">Clear&#8230;</string>
    <string name="cpln">Centre professionnel du Littoral neuchâtelois (CPLN)</string>
    <string name="cpln_webpage_url">http://www.cpln.ch/</string>
    <string name="cpln_webpage_url_short">www.cpln.ch</string>
    <string name="crag">CRAG (Commission paritaire romande d\'apprentissage de géomaticien&#47;ne)</string>
    <string name="delete">Delete</string>
    <string name="delete_3dots">Delete&#8230;</string>
    <string name="delete_all">Delete all</string>
    <string name="delete_all_history">Clear history</string>
    <string name="delete_all_points">Delete all points?</string>
    <string name="delete_job">Delete current job</string>
    <string name="description">Description</string>
    <string name="determination_sight_3dots">Determination sight No&#8230;</string>
    <string name="determination_sight_label">Determination sight No</string>
    <string name="developed_by">Developed by</string>
    <string name="dialog_add_point">Add a point</string>
    <string name="dialog_edit_point">Edit a point</string>
    <string name="differences_label">Differences [cm]</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_notice">This calculation software is primarily intended for geomatic apprentices for educational purpose.
        The CRAG disclaims any liability for any other use.</string>
    <string name="disclaimer_text">        This program is free software; you can redistribute it and/or
        modify it under the terms of the GNU General Public License version 2
        as published by the Free Software Foundation.
        
        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
        GNU General Public License version 2 (in about menu under settings) for more details.</string>
    <string name="displace_after">Displace after the point:</string>
    <string name="displacement_label">Displacement</string>
    <string name="dist_pt_1">Pt. A dist.</string>
    <string name="distance_label">Distance [m]</string>
    <string name="distance_angled_label">Dist. ang. [m]</string>
    <string name="distance_3dots">Distance&#8230;</string>
    <string name="distance_lon_east_label">Length DY [m]</string>
    <string name="distance_lon_west_label">Length AX [m]</string>
    <string name="distance_para_south_label">Distance d [m]</string>
    <string name="distance_projpoint_line_label">Point to project to line distance (X) [m]:</string>
    <string name="distance_projpoint_point_1_label">Projected point to point A distance (Y) [m]:</string>
    <string name="distance_projpoint_point_2_label">Projected point to point B distance (Z) [m]:</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="east">East</string>
    <string name="east_3dots">East&#8230;</string>
    <string name="east_label">East [m]</string>
    <string name="edit">Edit</string>
    <string name="epca">Ecole professionnelle commerciale et artisanale de Sion (EPCA)</string>
    <string name="epca_webpage_url">http://www.epcasion.ch/</string>
    <string name="epca_webpage_url_short">www.epcasion.ch</string>
    <string name="err_angle_label">Ang. Err. [cc]</string>
    <string name="err_trans_label">Trans. Err. [cm]</string>
    <string name="err_lon_label">Lon. Err. [cm]</string>
    <string name="error_at_least_one_orientation">You must provide at least one orientation!</string>
    <string name="error_choose_unknown_orientation">You must select an unknown orientation!</string>
    <string name="error_choose_file">Please, choose file to import!</string>
    <string name="error_enter_point_number">Please, enter points number!</string>
    <string name="error_file_already_exists">File already exists!</string>
    <string name="error_fill_data">Every mandatory field must be filled!</string>
    <string name="error_import_label">Import error</string>
    <string name="error_impossible_calculation">Impossible calculation!</string>
    <string name="error_impossible_to_import">Impossible to import the file!</string>
    <string name="error_no_suitable_calculation_found">No suitable calculation found!</string>
    <string name="error_no_points_to_save">There is no point to save!</string>
    <string name="error_no_points_saved">No point saved! Have you entered the point\'s number?</string>
    <string name="error_no_station_selected">No station selected!</string>
    <string name="error_radius_must_be_positive">The radius value must be positive!</string>
    <string name="error_point_number">A point\'s number must greater than or equal to 1.</string>
    <string name="error_points_import">An error occurred while importing points! Some points may have not been imported!</string>
    <string name="error_same_points">The points must be different!</string>
    <string name="error_three_points_required">At least three points should be provided!</string>
    <string name="error_unsupported_format">Unsupported format!</string>
    <string name="exception_invalid_format_values">This line contains invalid values!</string>
    <string name="exception_invalid_format_values_number">This line contains an invalid number of values!</string>
    <string name="excircle_label">Excircle radius [m]</string>
    <string name="existing_point_number">The point number is: <xliff:g>%s</xliff:g></string>
    <string name="export">Export</string>
    <string name="export_3dots">Export&#8230;</string>
    <string name="extremity_label">Extremity</string>
    <string name="fh_label">FH</string>
    <string name="filename">File name</string>
    <string name="first_point_number">First resulting point\'s number</string>
    <string name="flat_label">fLat [cm]</string>
    <string name="flon_label">fLon [cm]</string>
    <string name="format_3dots">Format&#8230;</string>
    <string name="free_station_label">Calculation of the free station</string>
    <string name="from_station">from station</string>
    <string name="fs_label">FS [cm]</string>
    <string name="fs_without_unit_label">FS</string>
    <string name="general_settings">General settings</string>
    <string name="import_3dots">Import&#8230;</string>
    <string name="mean_error_without_unit_label">Mean Error</string>
    <string name="name">Name</string>
    <string name="north_label">North [m]</string>
    <string name="perimeter_label">Perimeter [m]</string>
    <string name="point_class">Class</string>
    <string name="point_number">Point No</string>
    <string name="pref_about_title">About</string>
    <string name="pref_angles_display_precision">Decimals for angles</string>
    <string name="pref_averages_display_precision">Decimals for averages</string>
    <string name="pref_coordinates_decimal_precision">Decimal precision for coordinates</string>
    <string name="pref_coordinates_display_precision">Decimals for coordinates</string>
    <string name="pref_display_title">Display settings</string>
    <string name="pref_distances_display_precision">Decimals for distances</string>
    <string name="pref_gaps_display_precision">Decimals for gaps</string>
    <string name="pref_general_title">General settings</string>
    <string name="pref_negative_coordinates">Allow negative coordinates</string>
    <string name="pref_surfaces_display_precision">Decimals for surfaces</string>
    <string name="radius">Radius [m]</string>
    <string name="sa_label">sA [cm]:</string>
    <string name="se_label">sE [cm]:</string>
    <string name="search_3dots">Search&#8230;</string>
    <string name="share">Share</string>
    <string name="sn_label">sN [cm]:</string>
    <string name="surface_label">Surface [m&#178;]</string>
    <string name="target_point">Target point</string>
    <string name="unknown_orientation_label">Unkn. Orient. [g]</string>
    <string name="va_label">vA [cm]</string>
    <string name="ve_label">vE [cm]</string>
    <string name="vertex_number">Vertex No</string>
    <string name="vn_label">vN [cm]</string>
</resources>