<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory android:title="@string/pref_general_title">
        <ListPreference
            android:defaultValue=","
            android:entries="@array/csv_separator"
            android:entryValues="@array/csv_separator"
            android:key="csv_separator"
            android:title="@string/pref_csv_separator"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="switch_negative_coordinates"
            android:title="@string/pref_negative_coordinates" />

        <ch.hgdev.toposuite.settings.NumberPickerDialogPreference
            android:defaultValue="3"
            android:dialogMessage="@string/choose_value"
            android:key="coordinates_decimal_precision"
            android:max="5"
            android:title="@string/pref_coordinates_decimal_precision"
            custom:min="1" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory android:title="@string/pref_display_title">
        <ch.hgdev.toposuite.settings.NumberPickerDialogPreference
            android:defaultValue="3"
            android:dialogMessage="@string/choose_value"
            android:key="coordinates_display_precision"
            android:max="5"
            android:title="@string/pref_coordinates_display_precision"
            custom:min="1" />
        <ch.hgdev.toposuite.settings.NumberPickerDialogPreference
            android:defaultValue="4"
            android:dialogMessage="@string/choose_value"
            android:key="angles_display_precision"
            android:max="5"
            android:title="@string/pref_angles_display_precision"
            custom:min="1" />
        <ch.hgdev.toposuite.settings.NumberPickerDialogPreference
            android:defaultValue="3"
            android:dialogMessage="@string/choose_value"
            android:key="distances_display_precision"
            android:max="5"
            android:title="@string/pref_distances_display_precision"
            custom:min="1" />
        <ch.hgdev.toposuite.settings.NumberPickerDialogPreference
            android:defaultValue="3"
            android:dialogMessage="@string/choose_value"
            android:key="averages_display_precision"
            android:max="5"
            android:title="@string/pref_averages_display_precision"
            custom:min="1" />
        <ch.hgdev.toposuite.settings.NumberPickerDialogPreference
            android:defaultValue="1"
            android:dialogMessage="@string/choose_value"
            android:key="gaps_display_precision"
            android:max="5"
            android:title="@string/pref_gaps_display_precision"
            custom:min="1" />
        <ch.hgdev.toposuite.settings.NumberPickerDialogPreference
            android:defaultValue="4"
            android:dialogMessage="@string/choose_value"
            android:key="surfaces_display_precision"
            android:max="5"
            android:title="@string/pref_surfaces_display_precision"
            custom:min="1" />
    </androidx.preference.PreferenceCategory>
    <androidx.preference.PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/pref_about_title">
        <PreferenceScreen
            android:key="screen_about_toposuite"
            android:title="@string/about_toposuite" />
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>