<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
	    android:id="@+id/menu_item_share"
	    android:showAsAction="ifRoom"
	    android:title="@string/share"
	    android:actionProviderClass=
	        "android.widget.ShareActionProvider" />
    <item
        android:id="@+id/add_point_button"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="ifRoom|withText"
        android:title="@string/add_3dots"/>
    <item
        android:id="@+id/delete_points_button"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="ifRoom|withText"
        android:title="@string/delete_3dots"/>
    <item
        android:id="@+id/search_point_button"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="ifRoom|withText"
        android:title="@string/search_3dots"/>
    <item
        android:id="@+id/export_points_button"
        android:icon="@drawable/ic_action_download"
        android:showAsAction="ifRoom|withText"
        android:title="@string/export_3dots"/>

	<item
        android:id="@+id/import_points_button"
        android:icon="@drawable/ic_action_upload"
        android:showAsAction="ifRoom|withText"
        android:title="@string/import_3dots"/>
</menu>