<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_point_button"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search_3dots"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/delete_points_button"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete_3dots"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/import_points_button"
        android:icon="@drawable/ic_action_upload"
        android:title="@string/import_3dots"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/export_points_button"
        android:icon="@drawable/ic_action_download"
        android:title="@string/export_3dots"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/share_job_button"
        android:title="@string/share"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider"
        app:showAsAction="ifRoom" />
</menu>