<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- table of points header -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/point_number"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/east_label"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/north_label"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/altitude_label"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/point_class"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />
    </LinearLayout>

    <ListView
        android:id="@+id/apm_list_of_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp" >
    </ListView>

</LinearLayout>