<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingRight="8dp"
            android:text="@string/name"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.86"
            android:gravity="left|center_vertical"
            android:inputType="text"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingRight="8dp"
            android:text="@string/description"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/description"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.86"
            android:gravity="left|center_vertical"
            android:inputType="text"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingRight="8dp"
            android:text="@string/surface_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/surface"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.86"
            android:gravity="left|center_vertical"
            android:freezesText="true"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingRight="8dp"
            android:text="@string/perimeter_label"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/perimeter"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.86"
            android:gravity="left|center_vertical"
            android:freezesText="true"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <!-- table of points with radius header -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vertex_number"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/radius"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/point_number"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/east_label"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/north_label"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />
    </LinearLayout>

    <ListView
        android:id="@+id/list_of_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp" >
    </ListView>

</LinearLayout>