<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/free_station_label" />
        
        <TextView
            android:id="@+id/free_station"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.41"
            android:gravity="left|center_vertical"
            android:freezesText="true"
            android:paddingLeft="@dimen/activity_horizontal_margin" />
   </LinearLayout>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        
        <TextView
            android:id="@+id/free_station_point"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.41"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin" />
   </LinearLayout>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/mean_error_without_unit_label"
            android:textStyle="bold" />
	</LinearLayout>
	
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        
	    <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/se_label" />
        
        <TextView
            android:id="@+id/se"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.41"
            android:gravity="left|center_vertical"
            android:freezesText="true"
            android:paddingLeft="@dimen/activity_horizontal_margin" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:freezesText="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/sn_label" />
        
        <TextView
            android:id="@+id/sn"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.41"
            android:gravity="left|center_vertical"
            android:freezesText="true"
            android:paddingLeft="@dimen/activity_horizontal_margin" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:freezesText="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/sa_label" />
        
        <TextView
            android:id="@+id/sa"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.41"
            android:gravity="left|center_vertical"
            android:freezesText="true"
            android:paddingLeft="@dimen/activity_horizontal_margin" />
   </LinearLayout>
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:text="@string/unknown_orientation_label"
            android:textStyle="bold" />
        
        <TextView
            android:id="@+id/unknown_orientation"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.41"
            android:gravity="left|center_vertical"
            android:freezesText="true"
            android:paddingLeft="@dimen/activity_horizontal_margin" />
   </LinearLayout>
    
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/target_point"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/ve_label"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/vn_label"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/fs_label"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/va_label"
            android:textAppearance="?android:attr/textAppearanceListItemSmall" />
    </LinearLayout>

    <ListView
        android:id="@+id/results_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp" >
    </ListView>
</LinearLayout>